third_party/WebKit/LayoutTests/inspector-protocol/layout-fonts/resources/layout-font-test.js
@@ -51,6 +51,10 @@ function test()
         InspectorTest.evaluateInInspectedPage("injectCollectedResultsInPage(" +
                                               JSON.stringify(collectedFontUsage) +
                                               ")");
+        InspectorTest.evaluateInInspectedPage("postTestHookWithFontResults(" +
+                                              JSON.stringify(collectedFontUsage) +
+                                              ")");
+
     }
 
     function platformFontsForElementWithSelector(selector)
